# rest-reminder

./: .gitignore  Cargo.toml  README-zh_CN.md  README.md  build.rs  create_app_bundle_for_mac.sh  focus_log.txt
.github/workflows/: count_lines_of_code.yml
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  config.js  emoji-bg.js  main.js  orbit.js  theme.js  typing.js
plugins/: get_crypto_prices.py  hello_world.py  plugin_template.py  snake_game.py
src/: cli.rs  core.rs  lib.rs  main.rs  plotter.rs  statistics.rs  test.rs
src/core/: core.rs  interactive.rs  mod.rs
src/plugin/: mod.rs  plugin.rs  plugins.rs  template.rs
src/statistic/: log_entry.rs  mod.rs  plotter.rs  statistics.rs
src/web/: count.rs  dialog.rs  log.rs  mod.rs  plot.rs  plugin.rs  process.rs  rest.rs  web.rs
tests/: plugin_management.rs  test.rs  test_focus_log.txt  test_interactive.sh  test_plugins.sh  test_plugins_windows.ps1
