[package]
name = "rest-reminder"
version = "2.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
sysinfo = "0.37.0"
chrono = "0.4.40"
clap = { version = "4.4", features = ["derive"]}
rand = "0.9.1"
plotters = "0.3.7"
tokio = { version = "1.0", features = ["full"] }
rustyline = "17.0.1"
colored = "3.0.0"
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
walkdir = "2.4"
regex = "1.11.2"
actix-web = "4.11.0"

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
windows = {version = "0.52.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
widestring = "1.0"

# macOS specific dependencies  
[target.'cfg(target_os = "macos")'.dependencies]

[build-dependencies]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.20"
